<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A45A00"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/equals"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot"
        app:layout_constraintTop_toBottomOf="@+id/sum" />

    <Button
        android:id="@+id/button0"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/zero"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/share"
        android:layout_width="191dp"
        android:layout_height="49dp"
        android:backgroundTint="#A45A00"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/share"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ac"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:rippleColor="#FFC107" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A45A00"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/minus"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A45A00"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/multiply"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A45A00"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/divide"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <Button
        android:id="@+id/ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A45A00"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/ac"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/seven"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/eight"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/share"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/nine"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/share"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/six"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/one"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/dot"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/three"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/four"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/two"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/five"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A45A00"
        android:insetLeft="4dp"
        android:insetTop="0dp"
        android:insetRight="4dp"
        android:insetBottom="0dp"
        android:text="@string/plus"
        app:cornerRadius="0px"
        app:layout_constraintBottom_toTopOf="@+id/equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <TextView
        android:id="@+id/number"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:ems="10"
        android:gravity="end"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />



</androidx.constraintlayout.widget.ConstraintLayout>